Fix for word wrap in timetable

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -324,3 +324,7 @@ member-close {
   top: 4%;
   font-size: 20px;
 }
+
+.fc-event-title {
+    word-wrap: break-word;
+}
